*SVN*

* Added graceful handling of non-alphanumeric names and misplaced brackets in input parameters [bitsweat]

* Added a new container for cookies that makes them more intuative to use. The old methods of cookie and @cookies have been deprecated.

  Examples for writing:

    cookies["user_name"] = "david" # => Will set a simple session cookie
    cookies["login"] = { "value" => "XJ-122", "expires" => Time.now + 360} # => Will set a cookie that expires in 1 hour
    
  Examples for reading:
  
    cookies["user_name"] # => "david"
    cookies.size         # => 2

  Read more in ActionController::Cookies

  NOTE: If you were using the old accessor (cookies instead of @cookies), this could potentially break your code -- if you expect a full cookie object!

* Added the opportunity to defined method_missing on a controller which will handle all requests for actions not otherwise defined #223 [timb]

* Fixed AbstractRequest#remote_ip for users going through proxies - Patch #228 [Eric Hodel]

* Added Request#ssl? which is shorthand for @request.protocol == "https://"

* Added the choice to call form_tag with no arguments (resulting in a form posting to current action) [bitsweat]

* Upgraded to Builder 1.2.1

* Added :module as an alias for :controller_prefix to url_for and friends, so you can do redirect_to(:module => "shop", :controller => "purchases")
  and go to /shop/purchases/

* Added support for controllers in modules through @params["module"].

* Added reloading for dependencies under cached environments like FastCGI and mod_ruby. This makes it possible to use those environments for development.
  This is turned on by default, but can be turned off with ActionController::Base.reload_dependencies = false in production environments.

  NOTE: This will only have an effect if you use the new model, service, and observer class methods to mark dependencies. All libraries loaded through